kubernetes-cluster/manifests/apps/nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: media
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: '/var/www/html'
          name: storage-volume
          subPath: nextcloud/html
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: media-pvc
