kubernetes-cluster/manifests/apps/nextcloud/services.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: media
spec:
  selector:
    app: nextcloud
  ports:
  - name: nextcloud
    port: 80
    targetPort: 80
