kubernetes-cluster/manifests/apps/nextcloud/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: "nextcloud"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nextcloud.appchemy.co.za
    secretName: nextcloud-tls
  rules:
  - host: nextcloud.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
---
